--- a/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
+++ b/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
@@ -109,25 +109,27 @@ Mcu.IP9=UCPD1
 Mcu.IPNb=12
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin10=VP_GUI_INTERFACE_VS_gui_interface
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_SYS_VS_DBSignals
-Mcu.Pin13=VP_TRACER_EMB_VS_traceremb_lpuart1
-Mcu.Pin14=VP_USBPD_VS_USBPD1
-Mcu.Pin15=VP_USBPD_VS_PD3FULL
-Mcu.Pin16=VP_USBPD_VS_usbpd_tim1
-Mcu.Pin17=VP_USBPD_VS_usbpd_traceremb
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PC10
-Mcu.Pin5=PB4
-Mcu.Pin6=PB6
-Mcu.Pin7=PB8-BOOT0
-Mcu.Pin8=PB9
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
-Mcu.PinsNb=18
+Mcu.Pin0=PC13
+Mcu.Pin1=PA2
+Mcu.Pin10=PB9
+Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin12=VP_GUI_INTERFACE_VS_gui_interface
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_SYS_VS_DBSignals
+Mcu.Pin15=VP_TRACER_EMB_VS_traceremb_lpuart1
+Mcu.Pin16=VP_USBPD_VS_USBPD1
+Mcu.Pin17=VP_USBPD_VS_PD3FULL
+Mcu.Pin18=VP_USBPD_VS_usbpd_tim1
+Mcu.Pin19=VP_USBPD_VS_usbpd_traceremb
+Mcu.Pin2=PA3
+Mcu.Pin3=PA5
+Mcu.Pin4=PA11
+Mcu.Pin5=PA12
+Mcu.Pin6=PC10
+Mcu.Pin7=PB4
+Mcu.Pin8=PB6
+Mcu.Pin9=PB8-BOOT0
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=VDDA_APPLI,3300
 Mcu.UserName=STM32G474RETx
@@ -163,6 +165,11 @@ PA2.Signal=LPUART1_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=LPUART1_RX
+PA5.GPIOParameters=PinState,GPIO_Label
+PA5.GPIO_Label=LED2
+PA5.Locked=true
+PA5.PinState=GPIO_PIN_RESET
+PA5.Signal=GPIO_Output
 PB4.Mode=Dual_Role_AllSignals
 PB4.Signal=UCPD1_CC2
 PB6.Mode=Dual_Role_AllSignals
@@ -177,6 +184,10 @@ PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=VCC_PIN
 PC10.Locked=true
 PC10.Signal=GPIO_Output
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=USRBTN
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -206,7 +217,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=false-1-MX_GPIO_Init-GPIO-false-LL-true,false-2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-true,false-4-MX_UCPD1_Init-UCPD1-true-LL-true,false-5-MX_LPUART1_UART_Init-LPUART1-false-LL-true,false-6-MX_GUI_INTERFACE_Init-GUI_INTERFACE-false-HAL-true,false-7-MX_TRACER_EMB_Init-TRACER_EMB-false-HAL-true,8-MX_USBPD_Init-USBPD-false-HAL-false,false-9-MX_I2C1_Init-I2C1-false-HAL-true,false-10-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,false-2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-true,false-4-MX_UCPD1_Init-UCPD1-true-LL-true,false-5-MX_LPUART1_UART_Init-LPUART1-false-LL-true,false-6-MX_GUI_INTERFACE_Init-GUI_INTERFACE-false-HAL-true,false-7-MX_TRACER_EMB_Init-TRACER_EMB-false-HAL-true,8-MX_USBPD_Init-USBPD-false-HAL-false,false-9-MX_I2C1_Init-I2C1-false-HAL-true,false-10-MX_USB_PCD_Init-USB-false-HAL-true
 RCC.ADC12Freq_Value=120000000
 RCC.ADC345Freq_Value=120000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
