--- a/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
+++ b/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
@@ -96,40 +96,45 @@ Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-Mcu.IP10=USB
-Mcu.IP11=USBPD
+Mcu.IP10=UCPD1
+Mcu.IP11=USB
+Mcu.IP12=USBPD
 Mcu.IP2=GUI_INTERFACE
-Mcu.IP3=I2C1
-Mcu.IP4=LPUART1
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=TRACER_EMB
-Mcu.IP9=UCPD1
-Mcu.IPNb=12
+Mcu.IP3=HRTIM1
+Mcu.IP4=I2C1
+Mcu.IP5=LPUART1
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=TRACER_EMB
+Mcu.IPNb=13
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PA2
-Mcu.Pin10=PB9
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin12=VP_GUI_INTERFACE_VS_gui_interface
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_SYS_VS_DBSignals
-Mcu.Pin15=VP_TRACER_EMB_VS_traceremb_lpuart1
-Mcu.Pin16=VP_USBPD_VS_USBPD1
-Mcu.Pin17=VP_USBPD_VS_PD3FULL
-Mcu.Pin18=VP_USBPD_VS_usbpd_tim1
-Mcu.Pin19=VP_USBPD_VS_usbpd_traceremb
+Mcu.Pin10=PC10
+Mcu.Pin11=PB4
+Mcu.Pin12=PB6
+Mcu.Pin13=PB8-BOOT0
+Mcu.Pin14=PB9
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin16=VP_GUI_INTERFACE_VS_gui_interface
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_SYS_VS_DBSignals
+Mcu.Pin19=VP_TRACER_EMB_VS_traceremb_lpuart1
 Mcu.Pin2=PA3
+Mcu.Pin20=VP_USBPD_VS_USBPD1
+Mcu.Pin21=VP_USBPD_VS_PD3FULL
+Mcu.Pin22=VP_USBPD_VS_usbpd_tim1
+Mcu.Pin23=VP_USBPD_VS_usbpd_traceremb
 Mcu.Pin3=PA5
-Mcu.Pin4=PA11
-Mcu.Pin5=PA12
-Mcu.Pin6=PC10
-Mcu.Pin7=PB4
-Mcu.Pin8=PB6
-Mcu.Pin9=PB8-BOOT0
-Mcu.PinsNb=20
+Mcu.Pin4=PB12
+Mcu.Pin5=PB13
+Mcu.Pin6=PB14
+Mcu.Pin7=PB15
+Mcu.Pin8=PA11
+Mcu.Pin9=PA12
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=VDDA_APPLI,3300
 Mcu.UserName=STM32G474RETx
@@ -170,6 +175,14 @@ PA5.GPIO_Label=LED2
 PA5.Locked=true
 PA5.PinState=GPIO_PIN_RESET
 PA5.Signal=GPIO_Output
+PB12.Mode=Output_TC1TC2
+PB12.Signal=HRTIM1_CHC1
+PB13.Mode=Output_TC1TC2
+PB13.Signal=HRTIM1_CHC2
+PB14.Mode=Output_TD1TD2
+PB14.Signal=HRTIM1_CHD1
+PB15.Mode=Output_TD1TD2
+PB15.Signal=HRTIM1_CHD2
 PB4.Mode=Dual_Role_AllSignals
 PB4.Signal=UCPD1_CC2
 PB6.Mode=Dual_Role_AllSignals
@@ -217,15 +230,15 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,false-2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-true,false-4-MX_UCPD1_Init-UCPD1-true-LL-true,false-5-MX_LPUART1_UART_Init-LPUART1-false-LL-true,false-6-MX_GUI_INTERFACE_Init-GUI_INTERFACE-false-HAL-true,false-7-MX_TRACER_EMB_Init-TRACER_EMB-false-HAL-true,8-MX_USBPD_Init-USBPD-false-HAL-false,false-9-MX_I2C1_Init-I2C1-false-HAL-true,false-10-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,false-2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-true,false-4-MX_UCPD1_Init-UCPD1-true-LL-true,false-5-MX_LPUART1_UART_Init-LPUART1-false-LL-true,false-6-MX_GUI_INTERFACE_Init-GUI_INTERFACE-false-HAL-true,false-7-MX_TRACER_EMB_Init-TRACER_EMB-false-HAL-true,8-MX_USBPD_Init-USBPD-false-HAL-false,false-9-MX_I2C1_Init-I2C1-false-HAL-true,false-10-MX_USB_PCD_Init-USB-false-HAL-true,11-MX_HRTIM1_Init-HRTIM1-false-HAL-true
 RCC.ADC12Freq_Value=120000000
 RCC.ADC345Freq_Value=120000000
-RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=60000000
 RCC.APB1Freq_Value=60000000
 RCC.APB1TimFreq_Value=60000000
 RCC.APB2Freq_Value=60000000
-RCC.APB2TimFreq_Value=60000000
+RCC.APB2TimCLKDivider=2
+RCC.APB2TimFreq_Value=120000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
 RCC.CortexFreq_Value=60000000
@@ -234,7 +247,7 @@ RCC.FCLKCortexFreq_Value=60000000
 RCC.FDCANFreq_Value=60000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=60000000
-RCC.HRTIM1Freq_Value=60000000
+RCC.HRTIM1Freq_Value=120000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
@@ -243,14 +256,13 @@ RCC.I2C2Freq_Value=60000000
 RCC.I2C3Freq_Value=60000000
 RCC.I2C4Freq_Value=60000000
 RCC.I2SFreq_Value=120000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBCLKDivider,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=60000000
 RCC.LPUART1Freq_Value=60000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLN=15
 RCC.PLLPoutputFreq_Value=120000000
 RCC.PLLQ=RCC_PLLQ_DIV4
 RCC.PLLQoutputFreq_Value=60000000
@@ -259,7 +271,7 @@ RCC.PWRFreq_Value=120000000
 RCC.QSPIFreq_Value=120000000
 RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=120000000
-RCC.SYSCLKFreq_VALUE=120000000
+RCC.SYSCLKFreq_VALUE=104000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.UART4Freq_Value=60000000
 RCC.UART5Freq_Value=60000000
