--- a/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
+++ b/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
@@ -85,10 +85,43 @@ GPIO.groupedBy=Group By Peripherals
 GUI_INTERFACE.HWBoardVersionName=NUCLEO-G474RE
 GUI_INTERFACE.IPParameters=PDTypeName,HWBoardVersionName
 GUI_INTERFACE.PDTypeName=X-NUCLEO-DRP1M1
+HRTIM1.CompareUnit2-Output_TC1TC2=HRTIM_COMPAREUNIT_2
+HRTIM1.CompareUnit2-Output_TD1TD2=HRTIM_COMPAREUNIT_2
+HRTIM1.DeadTimeInsertion-Output_TC1TC2=HRTIM_TIMDEADTIMEINSERTION_ENABLED
+HRTIM1.DeadTimeInsertion-Output_TD1TD2=HRTIM_TIMDEADTIMEINSERTION_ENABLED
+HRTIM1.Deadtimeconfig-Output_TC1TC2=HRTIM_TIMERINDEX_TIMER_C
+HRTIM1.Deadtimeconfig-Output_TD1TD2=HRTIM_TIMERINDEX_TIMER_D
+HRTIM1.FallingSignLock-Output_TC1TC2=HRTIM_TIMDEADTIME_FALLINGSIGNLOCK_READONLY
+HRTIM1.FallingSignLock-Output_TD1TD2=HRTIM_TIMDEADTIME_FALLINGSIGNLOCK_READONLY
+HRTIM1.FallingValue-Output_TC1TC2=DT_FALLING
+HRTIM1.FallingValue-Output_TD1TD2=DT_FALLING
+HRTIM1.IPParameters=NumberSetSource1-Output_TC1TC2,SetOutput1_Source1-Output_TC1TC2,NumberResetSource1-Output_TC1TC2,CompareUnit2-Output_TC1TC2,ResetOutput1_Source1-Output_TC1TC2,NumberSetSource2_TC,NumberResetSource2_TC,ResetOutput2_Source1-Output_TC1TC2,CompareUnit2-Output_TD1TD2,NumberSetSource1-Output_TD1TD2,SetOutput1_Source1-Output_TD1TD2,NumberResetSource1-Output_TD1TD2,ResetOutput1_Source1-Output_TD1TD2,NumberResetSource2_TD,ResetOutput2_Source1-Output_TD1TD2,PrescalerRatio_TC,Periode_TC,Periode_TD,Deadtimeconfig-Output_TC1TC2,RisingValue-Output_TC1TC2,FallingValue-Output_TC1TC2,FallingSignLock-Output_TC1TC2,RisingSignLock-Output_TC1TC2,Deadtimeconfig-Output_TD1TD2,RisingValue-Output_TD1TD2,RisingSignLock-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingSignLock-Output_TD1TD2,DeadTimeInsertion-Output_TD1TD2,DeadTimeInsertion-Output_TC1TC2,NumberSetSource2_TD
+HRTIM1.IPParametersWithoutCheck=RisingValue-Output_TC1TC2,RisingValue-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingValue-Output_TC1TC2
+HRTIM1.NumberResetSource1-Output_TC1TC2=1
+HRTIM1.NumberResetSource1-Output_TD1TD2=1
+HRTIM1.NumberResetSource2_TC=1
+HRTIM1.NumberResetSource2_TD=1
+HRTIM1.NumberSetSource1-Output_TC1TC2=1
+HRTIM1.NumberSetSource1-Output_TD1TD2=1
+HRTIM1.NumberSetSource2_TC=0
+HRTIM1.NumberSetSource2_TD=0
+HRTIM1.Periode_TC=48000
+HRTIM1.Periode_TD=48000
+HRTIM1.PrescalerRatio_TC=HRTIM_PRESCALERRATIO_MUL32
+HRTIM1.ResetOutput1_Source1-Output_TC1TC2=HRTIM_OUTPUTRESET_TIMCMP2
+HRTIM1.ResetOutput1_Source1-Output_TD1TD2=HRTIM_OUTPUTRESET_TIMCMP2
+HRTIM1.ResetOutput2_Source1-Output_TC1TC2=HRTIM_OUTPUTRESET_TIMPER
+HRTIM1.ResetOutput2_Source1-Output_TD1TD2=HRTIM_OUTPUTRESET_TIMPER
+HRTIM1.RisingSignLock-Output_TC1TC2=HRTIM_TIMDEADTIME_RISINGSIGNLOCK_READONLY
+HRTIM1.RisingSignLock-Output_TD1TD2=HRTIM_TIMDEADTIME_RISINGSIGNLOCK_READONLY
+HRTIM1.RisingValue-Output_TC1TC2=DT_RISING
+HRTIM1.RisingValue-Output_TD1TD2=DT_RISING
+HRTIM1.SetOutput1_Source1-Output_TC1TC2=HRTIM_OUTPUTSET_TIMPER
+HRTIM1.SetOutput1_Source1-Output_TD1TD2=HRTIM_OUTPUTSET_TIMPER
 I2C1.CustomTiming=Disabled
 I2C1.IPParameters=Timing,CustomTiming,Speed
 I2C1.Speed=100
-I2C1.Timing=0x107075B0
+I2C1.Timing=0x20C0EDFF
 KeepUserPlacement=false
 LPUART1.BaudRate=921600
 LPUART1.IPParameters=BaudRate
@@ -231,56 +264,56 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,false-2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-true,false-4-MX_UCPD1_Init-UCPD1-true-LL-true,false-5-MX_LPUART1_UART_Init-LPUART1-false-LL-true,false-6-MX_GUI_INTERFACE_Init-GUI_INTERFACE-false-HAL-true,false-7-MX_TRACER_EMB_Init-TRACER_EMB-false-HAL-true,8-MX_USBPD_Init-USBPD-false-HAL-false,false-9-MX_I2C1_Init-I2C1-false-HAL-true,false-10-MX_USB_PCD_Init-USB-false-HAL-true,11-MX_HRTIM1_Init-HRTIM1-false-HAL-true
-RCC.ADC12Freq_Value=120000000
-RCC.ADC345Freq_Value=120000000
-RCC.AHBFreq_Value=60000000
-RCC.APB1Freq_Value=60000000
-RCC.APB1TimFreq_Value=60000000
-RCC.APB2Freq_Value=60000000
-RCC.APB2TimCLKDivider=2
-RCC.APB2TimFreq_Value=120000000
+RCC.ADC12Freq_Value=150000000
+RCC.ADC345Freq_Value=150000000
+RCC.AHBFreq_Value=150000000
+RCC.APB1Freq_Value=150000000
+RCC.APB1TimFreq_Value=150000000
+RCC.APB2Freq_Value=150000000
+RCC.APB2TimFreq_Value=150000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=60000000
+RCC.CortexFreq_Value=150000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=60000000
-RCC.FDCANFreq_Value=60000000
+RCC.FCLKCortexFreq_Value=150000000
+RCC.FDCANFreq_Value=150000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=60000000
-RCC.HRTIM1Freq_Value=120000000
+RCC.HCLKFreq_Value=150000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=60000000
-RCC.I2C2Freq_Value=60000000
-RCC.I2C3Freq_Value=60000000
-RCC.I2C4Freq_Value=60000000
-RCC.I2SFreq_Value=120000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=60000000
-RCC.LPUART1Freq_Value=60000000
+RCC.I2C1Freq_Value=150000000
+RCC.I2C2Freq_Value=150000000
+RCC.I2C3Freq_Value=150000000
+RCC.I2C4Freq_Value=150000000
+RCC.I2SFreq_Value=150000000
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=150000000
+RCC.LPUART1Freq_Value=150000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLPoutputFreq_Value=120000000
+RCC.PLLM=RCC_PLLM_DIV4
+RCC.PLLN=75
+RCC.PLLPoutputFreq_Value=150000000
 RCC.PLLQ=RCC_PLLQ_DIV4
-RCC.PLLQoutputFreq_Value=60000000
-RCC.PLLRCLKFreq_Value=120000000
-RCC.PWRFreq_Value=120000000
-RCC.QSPIFreq_Value=120000000
+RCC.PLLQoutputFreq_Value=75000000
+RCC.PLLRCLKFreq_Value=150000000
+RCC.PWRFreq_Value=150000000
+RCC.QSPIFreq_Value=150000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=120000000
-RCC.SYSCLKFreq_VALUE=104000000
+RCC.SAI1Freq_Value=150000000
+RCC.SYSCLKFreq_VALUE=150000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=60000000
-RCC.UART5Freq_Value=60000000
-RCC.USART1Freq_Value=60000000
-RCC.USART2Freq_Value=60000000
-RCC.USART3Freq_Value=60000000
+RCC.UART4Freq_Value=150000000
+RCC.UART5Freq_Value=150000000
+RCC.USART1Freq_Value=150000000
+RCC.USART2Freq_Value=150000000
+RCC.USART3Freq_Value=150000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=240000000
+RCC.VCOInputFreq_Value=4000000
+RCC.VCOOutputFreq_Value=300000000
 USBPD.IPParameters=PE_SpecRevision_P0,PORT0_NB_SINKPDO,PORT0_SINK_PDO2,PORT0_SINK_PDO3,PORT0_SINK_PDO4,Is_GetPPSStatus_Supported_P0,PORT0_SINK_PDO1,PE_DR_Swap_To_DFP_P0,PE_DR_Swap_To_UFP_P0
 USBPD.Is_GetPPSStatus_Supported_P0=USBPD_FALSE
 USBPD.PE_DR_Swap_To_DFP_P0=USBPD_FALSE
