--- a/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
+++ b/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
@@ -1,7 +1,38 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV32
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversion,CommonPathInternal
+ADC1.NbrOfConversion=2
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.Rank-2\#ChannelRegularConversion=2
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC1.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.4.EventEnable=DISABLE
+Dma.ADC1.4.Instance=DMA1_Channel1
+Dma.ADC1.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.4.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.4.Mode=DMA_CIRCULAR
+Dma.ADC1.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.4.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC1.4.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.4.RequestNumber=1
+Dma.ADC1.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC1.4.SignalID=NONE
+Dma.ADC1.4.SyncEnable=DISABLE
+Dma.ADC1.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC1.4.SyncRequestNumber=1
+Dma.ADC1.4.SyncSignalID=NONE
 Dma.LPUART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.LPUART1_RX.3.EventEnable=DISABLE
 Dma.LPUART1_RX.3.Instance=DMA1_Channel4
@@ -40,10 +71,11 @@ Dma.Request0=UCPD1_RX
 Dma.Request1=UCPD1_TX
 Dma.Request2=LPUART1_TX
 Dma.Request3=LPUART1_RX
-Dma.RequestsNb=4
+Dma.Request4=ADC1
+Dma.RequestsNb=5
 Dma.UCPD1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UCPD1_RX.0.EventEnable=DISABLE
-Dma.UCPD1_RX.0.Instance=DMA1_Channel1
+Dma.UCPD1_RX.0.Instance=DMA1_Channel5
 Dma.UCPD1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.UCPD1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.UCPD1_RX.0.Mode=DMA_NORMAL
@@ -76,10 +108,11 @@ Dma.UCPD1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.UCPD1_TX.1.SyncRequestNumber=1
 Dma.UCPD1_TX.1.SyncSignalID=NONE
 FREERTOS.INCLUDE_eTaskGetState=1
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,INCLUDE_eTaskGetState,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,INCLUDE_eTaskGetState,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=3
 FREERTOS.configTOTAL_HEAP_SIZE=7000
+FREERTOS.configUSE_NEWLIB_REENTRANT=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 GUI_INTERFACE.HWBoardVersionName=NUCLEO-G474RE
@@ -95,7 +128,12 @@ HRTIM1.FallingSignLock-Output_TC1TC2=HRTIM_TIMDEADTIME_FALLINGSIGNLOCK_READONLY
 HRTIM1.FallingSignLock-Output_TD1TD2=HRTIM_TIMDEADTIME_FALLINGSIGNLOCK_READONLY
 HRTIM1.FallingValue-Output_TC1TC2=DT_FALLING
 HRTIM1.FallingValue-Output_TD1TD2=DT_FALLING
-HRTIM1.IPParameters=NumberSetSource1-Output_TC1TC2,SetOutput1_Source1-Output_TC1TC2,NumberResetSource1-Output_TC1TC2,CompareUnit2-Output_TC1TC2,ResetOutput1_Source1-Output_TC1TC2,NumberSetSource2_TC,NumberResetSource2_TC,ResetOutput2_Source1-Output_TC1TC2,CompareUnit2-Output_TD1TD2,NumberSetSource1-Output_TD1TD2,SetOutput1_Source1-Output_TD1TD2,NumberResetSource1-Output_TD1TD2,ResetOutput1_Source1-Output_TD1TD2,NumberResetSource2_TD,ResetOutput2_Source1-Output_TD1TD2,PrescalerRatio_TC,Periode_TC,Periode_TD,Deadtimeconfig-Output_TC1TC2,RisingValue-Output_TC1TC2,FallingValue-Output_TC1TC2,FallingSignLock-Output_TC1TC2,RisingSignLock-Output_TC1TC2,Deadtimeconfig-Output_TD1TD2,RisingValue-Output_TD1TD2,RisingSignLock-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingSignLock-Output_TD1TD2,DeadTimeInsertion-Output_TD1TD2,DeadTimeInsertion-Output_TC1TC2,NumberSetSource2_TD
+HRTIM1.FaultLevel1-Output_TC1TC2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
+HRTIM1.FaultLevel1-Output_TD1TD2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
+HRTIM1.FaultLevel2-Output_TC1TC2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
+HRTIM1.FaultLevel2-Output_TD1TD2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
+HRTIM1.Fault_Line1=HRTIM_FAULT_1
+HRTIM1.IPParameters=NumberSetSource1-Output_TC1TC2,SetOutput1_Source1-Output_TC1TC2,NumberResetSource1-Output_TC1TC2,CompareUnit2-Output_TC1TC2,ResetOutput1_Source1-Output_TC1TC2,NumberSetSource2_TC,NumberResetSource2_TC,ResetOutput2_Source1-Output_TC1TC2,CompareUnit2-Output_TD1TD2,NumberSetSource1-Output_TD1TD2,SetOutput1_Source1-Output_TD1TD2,NumberResetSource1-Output_TD1TD2,ResetOutput1_Source1-Output_TD1TD2,NumberResetSource2_TD,ResetOutput2_Source1-Output_TD1TD2,PrescalerRatio_TC,Periode_TC,Periode_TD,Deadtimeconfig-Output_TC1TC2,RisingValue-Output_TC1TC2,FallingValue-Output_TC1TC2,FallingSignLock-Output_TC1TC2,RisingSignLock-Output_TC1TC2,Deadtimeconfig-Output_TD1TD2,RisingValue-Output_TD1TD2,RisingSignLock-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingSignLock-Output_TD1TD2,DeadTimeInsertion-Output_TD1TD2,DeadTimeInsertion-Output_TC1TC2,NumberSetSource2_TD,FaultLevel2-Output_TC1TC2,FaultLevel1-Output_TC1TC2,FaultLevel1-Output_TD1TD2,FaultLevel2-Output_TD1TD2,Fault_Line1
 HRTIM1.IPParametersWithoutCheck=RisingValue-Output_TC1TC2,RisingValue-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingValue-Output_TC1TC2
 HRTIM1.NumberResetSource1-Output_TC1TC2=1
 HRTIM1.NumberResetSource1-Output_TD1TD2=1
@@ -127,47 +165,50 @@ LPUART1.BaudRate=921600
 LPUART1.IPParameters=BaudRate
 Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
-Mcu.IP0=DMA
-Mcu.IP1=FREERTOS
-Mcu.IP10=UCPD1
-Mcu.IP11=USB
-Mcu.IP12=USBPD
-Mcu.IP2=GUI_INTERFACE
-Mcu.IP3=HRTIM1
-Mcu.IP4=I2C1
-Mcu.IP5=LPUART1
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IP9=TRACER_EMB
-Mcu.IPNb=13
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=TRACER_EMB
+Mcu.IP11=UCPD1
+Mcu.IP12=USB
+Mcu.IP13=USBPD
+Mcu.IP2=FREERTOS
+Mcu.IP3=GUI_INTERFACE
+Mcu.IP4=HRTIM1
+Mcu.IP5=I2C1
+Mcu.IP6=LPUART1
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SYS
+Mcu.IPNb=14
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
-Mcu.Pin1=PA2
-Mcu.Pin10=PC10
-Mcu.Pin11=PB4
-Mcu.Pin12=PB6
-Mcu.Pin13=PB8-BOOT0
-Mcu.Pin14=PB9
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin16=VP_GUI_INTERFACE_VS_gui_interface
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_SYS_VS_DBSignals
-Mcu.Pin19=VP_TRACER_EMB_VS_traceremb_lpuart1
-Mcu.Pin2=PA3
-Mcu.Pin20=VP_USBPD_VS_USBPD1
-Mcu.Pin21=VP_USBPD_VS_PD3FULL
-Mcu.Pin22=VP_USBPD_VS_usbpd_tim1
-Mcu.Pin23=VP_USBPD_VS_usbpd_traceremb
-Mcu.Pin3=PA5
-Mcu.Pin4=PB12
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=24
+Mcu.Pin1=PC2
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PC10
+Mcu.Pin13=PB4
+Mcu.Pin14=PB6
+Mcu.Pin15=PB8-BOOT0
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin18=VP_GUI_INTERFACE_VS_gui_interface
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PC3
+Mcu.Pin20=VP_SYS_VS_DBSignals
+Mcu.Pin21=VP_TRACER_EMB_VS_traceremb_lpuart1
+Mcu.Pin22=VP_USBPD_VS_USBPD1
+Mcu.Pin23=VP_USBPD_VS_PD3FULL
+Mcu.Pin24=VP_USBPD_VS_usbpd_tim1
+Mcu.Pin25=VP_USBPD_VS_usbpd_traceremb
+Mcu.Pin3=PA2
+Mcu.Pin4=PA3
+Mcu.Pin5=PA5
+Mcu.Pin6=PB12
+Mcu.Pin7=PB13
+Mcu.Pin8=PB14
+Mcu.Pin9=PB15
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=VDDA_APPLI,3300
 Mcu.UserName=STM32G474RETx
@@ -178,6 +219,7 @@ NVIC.DMA1_Channel1_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -234,6 +276,10 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USRBTN
 PC13.Locked=true
 PC13.Signal=GPIO_Input
+PC2.Mode=IN8-Single-Ended
+PC2.Signal=ADC1_IN8
+PC3.Mode=IN9-Single-Ended
+PC3.Signal=ADC1_IN9
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -263,7 +309,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,false-2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-true,false-4-MX_UCPD1_Init-UCPD1-true-LL-true,false-5-MX_LPUART1_UART_Init-LPUART1-false-LL-true,false-6-MX_GUI_INTERFACE_Init-GUI_INTERFACE-false-HAL-true,false-7-MX_TRACER_EMB_Init-TRACER_EMB-false-HAL-true,8-MX_USBPD_Init-USBPD-false-HAL-false,false-9-MX_I2C1_Init-I2C1-false-HAL-true,false-10-MX_USB_PCD_Init-USB-false-HAL-true,11-MX_HRTIM1_Init-HRTIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-true,false-4-MX_UCPD1_Init-UCPD1-true-LL-true,false-5-MX_LPUART1_UART_Init-LPUART1-false-LL-true,false-6-MX_GUI_INTERFACE_Init-GUI_INTERFACE-false-HAL-true,false-7-MX_TRACER_EMB_Init-TRACER_EMB-false-HAL-true,8-MX_USBPD_Init-USBPD-false-HAL-false,false-9-MX_I2C1_Init-I2C1-false-HAL-true,false-10-MX_USB_PCD_Init-USB-false-HAL-true,11-MX_HRTIM1_Init-HRTIM1-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADC12Freq_Value=150000000
 RCC.ADC345Freq_Value=150000000
 RCC.AHBFreq_Value=150000000
