PI complete untested

--- a/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
+++ b/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
@@ -1,38 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_8
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV32
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.CommonPathInternal=null|null|null|null
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversion,CommonPathInternal
-ADC1.NbrOfConversion=2
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=DISABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.EnableInjectedConversion=DISABLE
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,NbrOfConversion,ContinuousConvMode,DMAContinuousRequests,master,ExternalTrigConv,EOCSelection,Overrun,EnableInjectedConversion,CommonPathInternal
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.Rank-2\#ChannelRegularConversion=2
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.ADC1.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.4.EventEnable=DISABLE
-Dma.ADC1.4.Instance=DMA1_Channel1
-Dma.ADC1.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.4.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.4.Mode=DMA_CIRCULAR
-Dma.ADC1.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.4.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.ADC1.4.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.4.RequestNumber=1
-Dma.ADC1.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.ADC1.4.SignalID=NONE
-Dma.ADC1.4.SyncEnable=DISABLE
-Dma.ADC1.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.ADC1.4.SyncRequestNumber=1
-Dma.ADC1.4.SyncSignalID=NONE
 Dma.LPUART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.LPUART1_RX.3.EventEnable=DISABLE
 Dma.LPUART1_RX.3.Instance=DMA1_Channel4
@@ -71,8 +56,7 @@ Dma.Request0=UCPD1_RX
 Dma.Request1=UCPD1_TX
 Dma.Request2=LPUART1_TX
 Dma.Request3=LPUART1_RX
-Dma.Request4=ADC1
-Dma.RequestsNb=5
+Dma.RequestsNb=4
 Dma.UCPD1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UCPD1_RX.0.EventEnable=DISABLE
 Dma.UCPD1_RX.0.Instance=DMA1_Channel5
@@ -118,6 +102,8 @@ GPIO.groupedBy=Group By Peripherals
 GUI_INTERFACE.HWBoardVersionName=NUCLEO-G474RE
 GUI_INTERFACE.IPParameters=PDTypeName,HWBoardVersionName
 GUI_INTERFACE.PDTypeName=X-NUCLEO-DRP1M1
+HRTIM1.ADCTrigger_Id1=__NULL
+HRTIM1.CompareUnit1-Output_TC1TC2=__NULL
 HRTIM1.CompareUnit2-Output_TC1TC2=HRTIM_COMPAREUNIT_2
 HRTIM1.CompareUnit2-Output_TD1TD2=HRTIM_COMPAREUNIT_2
 HRTIM1.DeadTimeInsertion-Output_TC1TC2=HRTIM_TIMDEADTIMEINSERTION_ENABLED
@@ -132,8 +118,8 @@ HRTIM1.FaultLevel1-Output_TC1TC2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
 HRTIM1.FaultLevel1-Output_TD1TD2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
 HRTIM1.FaultLevel2-Output_TC1TC2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
 HRTIM1.FaultLevel2-Output_TD1TD2=HRTIM_OUTPUTFAULTLEVEL_INACTIVE
-HRTIM1.Fault_Line1=HRTIM_FAULT_1
-HRTIM1.IPParameters=NumberSetSource1-Output_TC1TC2,SetOutput1_Source1-Output_TC1TC2,NumberResetSource1-Output_TC1TC2,CompareUnit2-Output_TC1TC2,ResetOutput1_Source1-Output_TC1TC2,NumberSetSource2_TC,NumberResetSource2_TC,ResetOutput2_Source1-Output_TC1TC2,CompareUnit2-Output_TD1TD2,NumberSetSource1-Output_TD1TD2,SetOutput1_Source1-Output_TD1TD2,NumberResetSource1-Output_TD1TD2,ResetOutput1_Source1-Output_TD1TD2,NumberResetSource2_TD,ResetOutput2_Source1-Output_TD1TD2,PrescalerRatio_TC,Periode_TC,Periode_TD,Deadtimeconfig-Output_TC1TC2,RisingValue-Output_TC1TC2,FallingValue-Output_TC1TC2,FallingSignLock-Output_TC1TC2,RisingSignLock-Output_TC1TC2,Deadtimeconfig-Output_TD1TD2,RisingValue-Output_TD1TD2,RisingSignLock-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingSignLock-Output_TD1TD2,DeadTimeInsertion-Output_TD1TD2,DeadTimeInsertion-Output_TC1TC2,NumberSetSource2_TD,FaultLevel2-Output_TC1TC2,FaultLevel1-Output_TC1TC2,FaultLevel1-Output_TD1TD2,FaultLevel2-Output_TD1TD2,Fault_Line1
+HRTIM1.Fault_Line1=__NULL
+HRTIM1.IPParameters=NumberSetSource1-Output_TC1TC2,SetOutput1_Source1-Output_TC1TC2,NumberResetSource1-Output_TC1TC2,CompareUnit2-Output_TC1TC2,ResetOutput1_Source1-Output_TC1TC2,NumberSetSource2_TC,NumberResetSource2_TC,ResetOutput2_Source1-Output_TC1TC2,CompareUnit2-Output_TD1TD2,NumberSetSource1-Output_TD1TD2,SetOutput1_Source1-Output_TD1TD2,NumberResetSource1-Output_TD1TD2,ResetOutput1_Source1-Output_TD1TD2,NumberResetSource2_TD,ResetOutput2_Source1-Output_TD1TD2,PrescalerRatio_TC,Periode_TC,Periode_TD,Deadtimeconfig-Output_TC1TC2,RisingValue-Output_TC1TC2,FallingValue-Output_TC1TC2,FallingSignLock-Output_TC1TC2,RisingSignLock-Output_TC1TC2,Deadtimeconfig-Output_TD1TD2,RisingValue-Output_TD1TD2,RisingSignLock-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingSignLock-Output_TD1TD2,DeadTimeInsertion-Output_TD1TD2,DeadTimeInsertion-Output_TC1TC2,NumberSetSource2_TD,FaultLevel2-Output_TC1TC2,FaultLevel1-Output_TC1TC2,FaultLevel1-Output_TD1TD2,FaultLevel2-Output_TD1TD2,Fault_Line1,ADCTrigger_Id1,CompareUnit1-Output_TC1TC2
 HRTIM1.IPParametersWithoutCheck=RisingValue-Output_TC1TC2,RisingValue-Output_TD1TD2,FallingValue-Output_TD1TD2,FallingValue-Output_TC1TC2
 HRTIM1.NumberResetSource1-Output_TC1TC2=1
 HRTIM1.NumberResetSource1-Output_TD1TD2=1
@@ -184,38 +170,37 @@ Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC2
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PC10
-Mcu.Pin13=PB4
-Mcu.Pin14=PB6
-Mcu.Pin15=PB8-BOOT0
-Mcu.Pin16=PB9
-Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin18=VP_GUI_INTERFACE_VS_gui_interface
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PC3
-Mcu.Pin20=VP_SYS_VS_DBSignals
-Mcu.Pin21=VP_TRACER_EMB_VS_traceremb_lpuart1
-Mcu.Pin22=VP_USBPD_VS_USBPD1
-Mcu.Pin23=VP_USBPD_VS_PD3FULL
-Mcu.Pin24=VP_USBPD_VS_usbpd_tim1
-Mcu.Pin25=VP_USBPD_VS_usbpd_traceremb
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA5
-Mcu.Pin6=PB12
-Mcu.Pin7=PB13
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=26
+Mcu.Pin10=PA12
+Mcu.Pin11=PC10
+Mcu.Pin12=PB4
+Mcu.Pin13=PB6
+Mcu.Pin14=PB8-BOOT0
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin17=VP_GUI_INTERFACE_VS_gui_interface
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_SYS_VS_DBSignals
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_TRACER_EMB_VS_traceremb_lpuart1
+Mcu.Pin21=VP_USBPD_VS_USBPD1
+Mcu.Pin22=VP_USBPD_VS_PD3FULL
+Mcu.Pin23=VP_USBPD_VS_usbpd_tim1
+Mcu.Pin24=VP_USBPD_VS_usbpd_traceremb
+Mcu.Pin3=PA3
+Mcu.Pin4=PA5
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA11
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=VDDA_APPLI,3300
 Mcu.UserName=STM32G474RETx
 MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
+NVIC.ADC1_2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
@@ -278,8 +263,6 @@ PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC2.Mode=IN8-Single-Ended
 PC2.Signal=ADC1_IN8
-PC3.Mode=IN9-Single-Ended
-PC3.Signal=ADC1_IN9
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -333,7 +316,7 @@ RCC.I2C2Freq_Value=150000000
 RCC.I2C3Freq_Value=150000000
 RCC.I2C4Freq_Value=150000000
 RCC.I2SFreq_Value=150000000
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLP,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=150000000
 RCC.LPUART1Freq_Value=150000000
 RCC.LSCOPinFreq_Value=32000
@@ -342,7 +325,8 @@ RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
 RCC.PLLM=RCC_PLLM_DIV4
 RCC.PLLN=75
-RCC.PLLPoutputFreq_Value=150000000
+RCC.PLLP=RCC_PLLP_DIV20
+RCC.PLLPoutputFreq_Value=15000000
 RCC.PLLQ=RCC_PLLQ_DIV4
 RCC.PLLQoutputFreq_Value=75000000
 RCC.PLLRCLKFreq_Value=150000000
