final edits, somewhat works now
works in buck mode, adc bugs to 0 in mixed mode, porpably boost too.
Also adc is buggy and jittery sometimes even with high sampling and cap on pin.
Also usbcpd blocks everything and nothings works when usbcpd connected

--- a/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
+++ b/Projects/NUCLEO-G474RE/Applications/USB_PD/DRP1M1_DRP/DRP1M1_DRP.ioc
@@ -13,7 +13,7 @@ ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_92CYCLES_5
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -59,7 +59,7 @@ Dma.Request3=LPUART1_RX
 Dma.RequestsNb=4
 Dma.UCPD1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UCPD1_RX.0.EventEnable=DISABLE
-Dma.UCPD1_RX.0.Instance=DMA1_Channel5
+Dma.UCPD1_RX.0.Instance=DMA1_Channel1
 Dma.UCPD1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.UCPD1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.UCPD1_RX.0.Mode=DMA_NORMAL
@@ -201,10 +201,10 @@ MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.ADC1_2_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:3\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
